# valo-match-checker

./: REACT_SETUP.md  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: MatchCard.css  MatchCard.jsx
